--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "19.2.0",
     "next": "16.0.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@supabase/ssr": "^0.5.0",
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.2.0"
   },
