--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "stripe": "^19.1.0",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
